reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__timezone-4.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "reflectapi :: codegen :: openapi :: Spec :: from(& schema)"
---
{
  "openapi": "3.2.0",
  "info": {
    "title": "",
    "description": "",
    "version": "1.0.0"
  },
  "paths": {
    "/inout_test": {
      "description": "",
      "post": {
        "operationId": "inout_test",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/reflectapi_demo.tests.serde.TestStruct"
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "description": "200 OK",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/reflectapi_demo.tests.serde.TestStruct"
                }
              }
            }
          }
        }
      }
    }
  },
  "components": {
    "schemas": {
      "reflectapi_demo.tests.serde.TestStruct": {
        "type": "object",
        "title": "reflectapi_demo.tests.serde.TestStruct",
        "required": [
          "timezone"
        ],
        "properties": {
          "timezone": {
            "$ref": "#/components/schemas/std.string.String"
          }
        }
      },
      "std.string.String": {
        "description": "UTF-8 encoded string",
        "type": "string"
      }
    }
  }
}
